--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "tabWidth": 2,
-  "singleQuote": false,
+  "singleQuote": true,
   "printWidth": 80,
   "semi": true,
   "bracketSpacing": true,
